apps/kavita/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
spec:
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
      - image: kizaing/kavita:0.6.1
        imagePullPolicy: IfNotPresent
        name: kavita
        resources:
          requests:
            memory: "512M"
            cpu: "1"
          limits:
            memory: "2G"
            cpu: "2"
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /comics
          name: comics
        - mountPath: /kavita/config
          name: kavita-config
      restartPolicy: Always
      volumes:
      - name: comics
        nfs:
          server: 192.168.1.35
          path: /Media/Comics
      - name: kavita-config
        persistentVolumeClaim:
          claimName: kavita-config
