apps/kavita/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kavita
  name: kavita
spec:
  ports:
  - name: web
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: kavita
  type: ClusterIP
